# baseforge

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/baseforge/: __init__.py  cipher.py  cli.py  encoding.py  hashing.py  jwt_ops.py  timestamp.py  uuid_ops.py
tests/: test_cipher.py  test_cli.py  test_encoding.py  test_hashing.py  test_jwt.py  test_timestamp.py  test_uuid.py
