[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseforge"
version = "1.0.0"
description = "Comprehensive Encoding, Decoding & Crypto Utility CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "EdgarOrtegaRamirez" }]
keywords = ["encoding", "decoding", "jwt", "uuid", "hashing", "crypto", "cli", "base64", "timestamp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
baseforge = "baseforge.cli:main"

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/baseforge"
Repository = "https://github.com/EdgarOrtegaRamirez/baseforge"
Issues = "https://github.com/EdgarOrtegaRamirez/baseforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/baseforge"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
